Mon Aug 27 19:58:19 BST 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Return 1 if we fail to close the
	  pipeline's output.

Sun Aug 26 23:33:23 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (format_display): Check whether format_cmd is NULL
	  before discarding stderr from it.

Sun Aug 26 21:20:45 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (checked_popen): Remove unnecessary SECURE_MAN_UID
	  guard; drop_effective_privs/regain_effective_privs already check
	  this.
	* src/security.c (remove_with_dropped_privs): Likewise. The uid !=
	  ruid check is no longer necessary now that
	  drop_effective_privs/regain_effective_privs handle nesting
	  correctly.

Sun Aug 26 19:40:12 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): If MAN_KEEP_FORMATTING is set in
	  the environment, don't strip formatting characters with col
	  (Debian bug #340673).
	* man/man1/man.man1 (ENVIRONMENT): Document MAN_KEEP_FORMATTING.
	* docs/NEWS: Document this.

Sun Aug 26 16:40:50 BST 2007  Colin Watson  <cjwatson@debian.org>

	Suppress warnings in --quiet mode (thanks, Martin Dorey; Debian bugs
	#348008, #378428, and #411220).

	* src/check_mandirs.c (test_manfile): Suppress "bad symlink" warning
	  under --quiet.
	* src/ult_src.c (ult_hardlink): Suppress "can't search directory"
	  warning under --quiet.
	  (ult_softlink): Suppress "dangling symlinks" and "can't resolve"
	  warnings under --quiet.
	  (ult_src): Suppress "can't resolve", "is self referencing", and
	  "can't open" warnings under --quiet.
	* src/lexgrog.l: Declare global quiet variable.

Sun Aug 26 16:10:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (main): Skip descriptions with NULL name or whatis.
	  This causes pages with no description to be flagged as parse
	  failures, so that automatic scanners can pick them up more easily.

Sun Aug 26 15:08:45 BST 2007  Colin Watson  <cjwatson@debian.org>
