@@ -1,3 +1,8 @@
+Mon Aug 27 20:02:17 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_wait): Re-raise SIGINT or SIGQUIT if they
+	  terminate a subprocess.
+
 Mon Aug 27 19:58:19 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (pipeline_wait): Return 1 if we fail to close the
